src/test/deca/context/valid/created/unary-minus-int.deca
//Description :
// Unary minus sur un entier
//
// Resultats :
//


{
    -2;
}
