src/test/deca/context/invalid/created/object_class3.deca
//Description :
//Nom récurent
//
// Resultats :
// Erreur

class A{}

class A{}
